--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "circular-json": "^0.5.9",
     "core-js": "^3.6.5",
+    "echarts": "^5.3.3",
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
+    "vue-echarts": "^6.0.1",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -22,6 +25,7 @@
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
+    "@vue/composition-api": "^1.7.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
