--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.27.2",
     "circular-json": "^0.5.9",
     "core-js": "^3.6.5",
-    "echarts": "^5.3.3",
+    "echarts": "^5.2.2",
+    "echarts-liquidfill": "^3.1.0",
     "element-ui": "^2.4.5",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.11",
     "vue-echarts": "^6.0.1",
     "vue-quill-editor": "^3.0.6",
@@ -20,6 +22,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@nuxtjs/composition-api": "^0.32.0",
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-plugin-router": "~4.5.15",
